--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -25,31 +25,65 @@ html
                                                         span.unskew data engineer
                                         .links
                                                 a(href='https://github.com/BzFTMxc')
-                                                        img(src='assets/img/github.png')
+                                                        img(src='assets/img/gh.png')
                                                         | https://github.com/BzFTMxc
                                                 a(href='https://BzFTMxc.github.io')
-                                                        img(src='assets/img/web.png')
+                                                        img(src='assets/img/link.png')
                                                         | https://BzFTMxc.github.io
-                                                a(href='https://github.com/BzFTMxc')
-                                                        img(src='assets/img/github.png')
-                                                        | https://github.com/BzFTMxc
-
+                                                a(href='bitcoin:3124b234g2hg2h')
+                                                        img(src='assets/img/btc.png')
+                                                        | 354b3j5g34kj4g
                                 section#timeline.wrapper
                                         .timeline
-                                                .block.dashed.short
+                                                .block.dashed.large
                                                         .left
                                                                 .time Today
+                                                                .section
+                                                                        h4.title Technology Hands-On
+                                                                        .sub-section
+                                                                                b.title Languages
+                                                                                ul.technologies
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                        .sub-section
+                                                                                b.title Languages
+                                                                                ul.technologies
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                        .sub-section
+                                                                                b.title Languages
+                                                                                ul.technologies
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                                                        li G
+                                                         
                                                         .right
                                                                 | I want to join your team.
                                                                 .content
-                                                                        p ---
+                                                                        p My idea of profession is to work for my passion. My passion for innovation, passion for computers, and yes passion for business co-define the terms on which I live.
                                                 .block
                                                         .left
                                                                 .time Aug '17
                                                                 .content
                                                                         h3 PNIMaps (Prototype)
                                                                         a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p Physical network inventory management and network analysis through Google Maps based interface. Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map. Implementation of proposed solution could reduce the usage proprietary softwares by a large part of team and hence, can save considerable cost of licensing.
+                                                                        p                                    
+                                                                                | Physical network inventory management and network analysis through Google Maps based interface.
+                                                                                | Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map. Implementation of proposed solution could reduce the usage proprietary softwares by a large part of team and hence, can save considerable cost of licensing.
                                                                         ul.skills
                                                                                 li GML
                                                                                 li OSGeo
@@ -77,7 +111,9 @@ html
                                                                         h3 Nexify StoreBiz
                                                                         strong Dynamic pricing for storage business
                                                                         a(target='_blank', href='https://gust.com/companies/srp-systems-inc') https://gust.com/companies/srp-systems-inc
-                                                                        p Worked with SRP Systems team to build dynamic pricing model for storage business. Lead the team as a technology partner for implementation of solution designed by Dr. Raju Penmatcha; founder of SRP Systems and a great data scientist.
+                                                                        p
+                                                                                | Worked with SRP Systems team to build dynamic pricing model for storage business.
+                                                                                | Lead the team as a technology partner for implementation of solution designed by Dr. Raju Penmatcha; founder of SRP Systems and a great data scientist.
                                                                         ul.skills
                                                                                 li RabbitMQ
                                                                                 li Python
@@ -96,7 +132,9 @@ html
                                                                         h3 SmartC - Infinilytics
                                                                         strong Insurance fraud detection solution
                                                                         a(target='_blank', href='https://www.infinilytics.com/illustrations/') https://www.infinilytics.com/smartc/
-                                                                        p Technology partnership with Infinilytics; developers of patented solution for insurance fraud detection. Lead the offshore development and successfully served two clients for Infinilytics. Also; deployed and maintained HIPAA compliant infrastructure at workplace.
+                                                                        p
+                                                                                | Technology partnership with Infinilytics; developers of patented solution for insurance fraud detection.
+                                                                                | Lead the offshore development and successfully served two clients for Infinilytics. Also; deployed and maintained HIPAA compliant infrastructure at workplace.
                                                                         ul.skills
                                                                                 li Titan Graph
                                                                                 li Gremlin
@@ -116,7 +154,9 @@ html
                                                                 .content
                                                                         h3 Xenonify - IoT Platform
                                                                         a(target='_blank', href='https://xenonify.com') https://xenonify.com
-                                                                        p As our team grew; we looked for opportunities within our market. We developed an IoT SaaS platform specifically to serve the upcoming needs of our clients. I played an important role in architecture and implementation of the solution. Successfully served client; working for efficient power utilization.
+                                                                        p
+                                                                                | As our team grew; we looked for opportunities within our market. We developed an IoT SaaS platform specifically to serve the upcoming needs of our clients.
+                                                                                | I played an important role in architecture and implementation of the solution. Successfully served client; working for efficient power utilization.
                                                                         ul.skills
                                                                                 li Python
                                                                                 li Angular.js
@@ -136,7 +176,9 @@ html
                                                                         h3 RayCare Profiler
                                                                         strong Health profiler for healthcare platform RayCare
                                                                         a(target='_blank', href='http://raycare.co/') http://raycare.co
-                                                                        p An in-house initiative for healthcare grew into a SaaS platform. I worked on healthcare profiler for the platform; which allowed users to keep track of their body vitals, medical reports and diet information. We utilized available technologies to automate OCR and digitize medical reports.
+                                                                        p
+                                                                                | An in-house initiative for healthcare grew into a SaaS platform.
+                                                                                | I worked on healthcare profiler for the platform; which allowed users to keep track of their body vitals, medical reports and diet information. We utilized available technologies to automate OCR and digitize medical reports.
                                                                         ul.skills
                                                                                 li Python
                                                                                 li Hadoop
