Added technology skills.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -38,43 +38,84 @@ html
                                                 .block.dashed.large
                                                         .left
                                                                 .time Today
-                                                                .section
-                                                                        h4.title Technology Hands-On
-                                                                        .sub-section
-                                                                                b.title Languages
-                                                                                ul.technologies
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                        .sub-section
-                                                                                b.title Languages
-                                                                                ul.technologies
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                        .sub-section
-                                                                                b.title Languages
-                                                                                ul.technologies
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                                                        li G
-                                                         
                                                         .right
-                                                                | I want to join your team.
+                                                                b I want to join your team.
                                                                 .content
                                                                         p My idea of profession is to work for my passion. My passion for innovation, passion for computers, and yes passion for business co-define the terms on which I live.
+                                                                .section
+                                                                        .sub-section
+                                                                                ul.journey
+                                                                                        li
+                                                                                                .milestone
+                                                                                                        img(src='assets/img/freelancer.png')
+                                                                                                        b Freelancer
+                                                                                        li
+                                                                                                .milestone
+                                                                                                        img(src='assets/img/freelancer.png')
+                                                                                                        b Co-Founder CTO
+                                                                                        li
+                                                                                                .milestone
+                                                                                                        img(src='assets/img/freelancer.png')
+                                                                                                        b Employee
+                                                                                        li
+                                                                                                .milestone
+                                                                                                        img(src='assets/img/freelancer.png')
+                                                                                                        b Teammate
+                                                                .section
+                                                                        .sub-section
+                                                                                b.title Language
+                                                                                ul.technologies
+                                                                                        li.pro Python
+                                                                                        li.int Golang
+                                                                                        li.pro JavaScript
+                                                                                        li.beg Scala
+                                                                                        li.int C
+                                                                                        li.beg Java
+                                                                        .sub-section
+                                                                                b.title Framework & Utility
+                                                                                ul.technologies
+                                                                                        li.pro Flask
+                                                                                        li.int Hadoop
+                                                                                        li.int Spark
+                                                                                        li.pro Scrapy
+                                                                                        li.beg RabbitMQ
+                                                                                        li.int Kafka
+                                                                                        li.beg Storm
+                                                                                        li.pro AngularJS
+                                                                                        li.int D3.JS
+                                                                                        li.beg Django
+                                                                                        li.beg Akka
+                                                                                        li.int Hadoop Ecosystem Tools
+                                                                                        li.beg ReactJS
+                                                                                        li.beg Finatra
+                                                                        .sub-section
+                                                                                b.title Storage &amp; Search
+                                                                                ul.technologies
+                                                                                        li.pro MongoDB
+                                                                                        li.pro MySQL
+                                                                                        li.pro PostgreSQL
+                                                                                        li.pro HDFS
+                                                                                        li.int Titan DB
+                                                                                        li.pro Elasticsearch 
+                                                                                        li.beg SolR
+                                                                                        li.pro HBase
+                                                                                        li.beg Cassandra
+                                                                                        li.int Neo4J
+                                                                        .sub-section
+                                                                                b.title Workflow &amp; Deployment
+                                                                                ul.technologies
+                                                                                        li.int Docker
+                                                                                        li.pro Openstack
+                                                                                        li.int AWS Cloud
+                                                                                        li.pro Jenkins
+                                                                                        li.pro Git
+                                                                                        li.int Slack
+                                                                                        li.beg Shell Scripting
+                                                                                        li.pro Taiga
+                                                                                        li.beg JIRA
+                                                                                        li.int Kubernetes
+                                                                                        li.beg GitLab
+
                                                 .block
                                                         .left
                                                                 .time Aug '17
@@ -83,7 +124,8 @@ html
                                                                         a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
                                                                         p                                    
                                                                                 | Physical network inventory management and network analysis through Google Maps based interface.
-                                                                                | Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map. Implementation of proposed solution could reduce the usage proprietary softwares by a large part of team and hence, can save considerable cost of licensing.
+                                                                                | Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map.
+                                                                                span.no-print Implementation of proposed solution could reduce the usage proprietary softwares by a large part of team and hence, can save considerable cost of licensing.
                                                                         ul.skills
                                                                                 li GML
                                                                                 li OSGeo
