--- a/assets/css/BzFTMxc.css
+++ b/assets/css/BzFTMxc.css
@@ -134,7 +134,7 @@ body {
   height: 100px;
 }
 .timeline .block.large {
-  height: 350px;
+  height: 520px;
 }
 .timeline .block::before {
   content: '';
@@ -262,7 +262,7 @@ body {
 .section {
   float: left;
   width: 100%;
-  margin: 20px 0px;
+  margin: 15px 0px;
 }
 .section .title {
   font-weight: 600;
@@ -270,16 +270,29 @@ body {
 .section .sub-section {
   float: left;
   width: 100%;
-  margin: 10px 0px;
+  margin: 15px 0px;
 }
 .section .sub-section .title {
-  font-weight: 400;
+  font-weight: 600;
   font-style: italic;
+  font-size: 10pt;
 }
 .section ul.technologies {
   list-style: none;
   margin: 5px 0px;
 }
 .section ul.technologies li {
-  margin: 0px 5px;
+  margin: 3px 5px;
+  font-size: 8pt;
+  background: #EEE;
+  color: #000;
+  padding: 3px 8px;
+}
+.section ul.technologies li.int {
+  background: #666;
+  color: #FFF;
+}
+.section ul.technologies li.pro {
+  background: #222;
+  color: #FFF;
 }
