--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -151,7 +151,7 @@ html, body{
 	}
 
 	&.large{
-	    height: 350px;
+	    height: 520px;
 	}
 
 	&::before{
@@ -310,7 +310,7 @@ html, body{
 .section{
     float: left;
     width: 100%;
-    margin: 20px 0px;
+    margin: 15px 0px;
 
     .title{
 	font-weight: 600;
@@ -319,11 +319,12 @@ html, body{
     .sub-section{
 	float: left;
 	width: 100%;
-	margin: 10px 0px;
+	margin: 15px 0px;
 
 	.title{
-	    font-weight: 400;
+	    font-weight: 600;
 	    font-style: italic;
+	    font-size: 10pt;
 	}
     }
 
@@ -332,7 +333,20 @@ html, body{
 	margin: 5px 0px;
 
 	li{
-	    margin: 0px 5px;
+	    margin: 3px 5px;
+	    font-size: 8pt;
+	    background: #EEE;
+	    color: #000;
+	    padding: 3px 8px;
+
+	    &.int{
+		background: #666;
+		color: #FFF;
+	    }
+	    &.pro{
+		background: #222;
+		color: #FFF;
+	    }
 	}
     }
 }
