--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -47,21 +47,22 @@ html
                                                                                 ul.journey
                                                                                         li
                                                                                                 .milestone
-                                                                                                        img(src='assets/img/freelancer.png')
+                                                                                                        .image.square(style='background-image: url("assets/img/freelancer.jpg")')
                                                                                                         b Freelancer
                                                                                         li
                                                                                                 .milestone
-                                                                                                        img(src='assets/img/freelancer.png')
-                                                                                                        b Co-Founder CTO
+                                                                                                        .image.square(style='background-image: url("assets/img/xenonstack.png")')
+                                                                                                        b Co-founder CTO
                                                                                         li
                                                                                                 .milestone
-                                                                                                        img(src='assets/img/freelancer.png')
+                                                                                                        .image.square(style='background-image: url("assets/img/infosys.jpg")')
                                                                                                         b Employee
                                                                                         li
                                                                                                 .milestone
-                                                                                                        img(src='assets/img/freelancer.png')
-                                                                                                        b Teammate
+                                                                                                        .image.square(style='background-image: url("assets/img/job.png")')
+                                                                                                        b For Hire
                                                                 .section
+                                                                        h4.title Technology Experience
                                                                         .sub-section
                                                                                 b.title Language
                                                                                 ul.technologies
@@ -91,6 +92,7 @@ html
                                                                         .sub-section
                                                                                 b.title Storage &amp; Search
                                                                                 ul.technologies
+                                                                                        li.int Alluxio
                                                                                         li.pro MongoDB
                                                                                         li.pro MySQL
                                                                                         li.pro PostgreSQL
