--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -310,7 +310,11 @@ html, body{
 .section{
     float: left;
     width: 100%;
-    margin: 15px 0px;
+    margin: 20px 0px;
+
+    @media print{
+	margin: 10px 0px;
+    }
 
     .title{
 	font-weight: 600;
@@ -319,12 +323,13 @@ html, body{
     .sub-section{
 	float: left;
 	width: 100%;
-	margin: 15px 0px;
+	margin: 10px 0px;
 
 	.title{
-	    font-weight: 600;
+	    font-weight: 400;
 	    font-style: italic;
-	    font-size: 10pt;
+	    font-size: 9pt;
+	    color: #000;
 	}
     }
 
@@ -335,17 +340,105 @@ html, body{
 	li{
 	    margin: 3px 5px;
 	    font-size: 8pt;
-	    background: #EEE;
-	    color: #000;
+	    background: #F7F7F7;
+	    color: #333;
 	    padding: 3px 8px;
 
 	    &.int{
-		background: #666;
-		color: #FFF;
+		background: #EEE;
+		color: #111;
 	    }
 	    &.pro{
-		background: #222;
-		color: #FFF;
+		background: #DDD;
+		color: #000;
+	    }
+	}
+    }
+}
+
+ul.journey{
+    list-style: none;
+    float: left;
+    width: 100%;
+
+    li{
+	position: relative;
+	float: left;
+	width: 25%;
+
+	&::before{
+	    position: absolute;
+	    content: '';
+	    top: 40%;
+	    left: 0;
+	    width: 30%;
+	    height: 0;
+	    border-bottom: 1px #CCC dotted;
+	    z-index: 0;
+	}
+	&:first-child::before{
+	    border-bottom: 1px #CCC dashed;
+	}
+	
+	&::after{
+	    position: absolute;
+	    content: '';
+	    top: 40%;
+	    right: 0;
+	    width: 30%;
+	    height: 0;
+	    border-bottom: 1px #CCC dotted;
+	    z-index: 0;
+	}
+
+	
+	&:last-child::before{
+	    position: absolute;
+	    content: '';
+	    top: 35%;
+	    left: 0;
+	    width: 0;
+	    height: 0;
+	    border-top: 5px solid transparent;
+	    border-bottom: 5px solid transparent;
+	    border-left: 5px solid #333;
+	}
+	&:last-child::after{
+	    position: absolute;
+	    content: '';
+	    top: 35%;
+	    left: 10px;
+	    width: 0;
+	    height: 0;
+	    border-top: 5px solid transparent;
+	    border-bottom: 5px solid transparent;
+	    border-left: 5px solid #999;
+	}
+
+	.milestone{
+	    float: left;
+	    width: 100%;
+	    padding: 0%;
+	    text-align: center;
+
+	    .image{
+		float: left;
+		width: 40%;
+		margin: 5% 30%;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: auto 100%;
+		border-radius: 50%;
+	    }
+
+	    b{
+		font-weight: 300;
+		font-size: 9pt;
+		color: #777;
+
+		@media print{
+		    font-size: 8pt;
+		}
 	    }
 	}
     }
